# projeto-bpa

./: .gitconfig  .gitignore  .gitmessage  README.md
data-injector/: .gitignore  Dockerfile  README.md  config.py  debug_config.py  debug_database.py  debug_query.py  docker-compose.yml  main.py  requirements.txt
data-injector/app/: __init__.py
data-injector/app/controllers/: upload_controller.py
data-injector/app/models/: database.py
data-injector/app/repositories/: async_base.py  base.py
data-injector/app/routes/: api.py
data-injector/app/services/: async_processor.py  data_comparator.py  (+5 more)
geradorbpa/: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  estrutura.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
geradorbpa/app/: __init__.py  config.py  models.py  routes.py
geradorbpa/app/data/: organization.json
geradorbpa/app/services/: auth.py  auth_service.py  bpa_service.py
geradorbpa/app/static/: dashboard.css  styles.css
geradorbpa/app/templates/: bpa.html  dashboard.html  login.html  menu.html
geradorbpa/app/utils/: bpa_controller.py  bpa_formatter.py  bpa_generator.py  bpa_validator.py  bpa_view.py  cache.py  config_reader.py  dashboard.py  data_mapping.py  database.py  fetch_data.py  logger.py
geradorbpa/app/utils/bpa/: base_generator.py  consolidado_generator.py  generator_factory.py  individualizado_generator.py  validators.py
geradorbpa/tests/: __init__.py  conftest.py
geradorbpa/tests/integration/: test_bpa_service.py
geradorbpa/tests/unit/: test_generators.py  test_validators.py
(+6 files in other folders)
